<resources>
    <string name="app_name">Vroom</string>
    <string name="title_home">Home</string>
    <string name="API_KEY">AIzaSyCEtLtoQJZrHxVZy0rb7uobFHWZZu-qNtI</string>
    <string name="title_vehicle">Vehicle</string>
    <string name="title_status">Status</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_test_tab">TestTab</string>
    <string name="tab_explore">Explore</string>
    <string name="tab_car">Car</string>
    <string name="tab_motorcycle">Bike</string>
    <string name="tab_van">Van</string>
    <string name="tab_bicycle">Bicycle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="spinnertype">Type</string>
    <string name="PaymentButton">Proceed to Payment</string>
    <string name="ViewMessageButton">View Message Sent</string>
    <string name="CancleButton">Cancle Request</string>

    <string name="AcceptedText">Your Request has Been Accepted</string>
    <string name="RejectedText">Your Request has Been Rejected</string>
    <string name="PendingText">The Lessor have not responded yet</string>

    <string name="login">http://192.168.1.103/vroom-api/public/api/login</string>
    <string name="register">http://192.168.1.103/vroom-api/public/api/register</string>
    <string name="validate">http://192.168.1.103/vroom-api/public/api/validate</string>
    <string name="updateinfo">http://192.168.1.103/vroom-api/public/api/updateinfo</string>
    <string name="uploadimage">http://192.168.1.103/vroom-api/public/api/uploadimage</string>
    <string name="profilepic">http://192.168.1.103/vroom-api/public/storage/picture/profile/</string>
    <string name="vehiclepic">http://192.168.1.103/vroom-api/public/storage/picture/vehicle/</string>

    <string name="insertvehicle">http://192.168.1.103/vroom-api/public/api/insertvehicle/</string>

    <string name="vehiclelist">http://192.168.1.103/vroom-api/public/api/vehiclelist</string>
    <string name="wishlist">http://192.168.1.103/vroom-api/public/api/wishlist</string>
    <string name="addwishlist">http://192.168.1.103/vroom-api/public/api/addwishlist</string>
    <string name="ratinglist">http://192.168.1.103/vroom-api/public/api/ratinglist</string>

    <string name="requestvehicle">http://192.168.1.103/vroom-api/public/api/request</string>
    <string name="status">http://192.168.1.103/vroom-api/public/api/status</string>
    <string name="lessorrequest">http://192.168.1.103/vroom-api/public/api/lessorrequest</string>
    <string name="lessorlist">http://192.168.1.103/vroom-api/public/api/lessorlist</string>

    <string name="setlocation">http://192.168.1.103/vroom-api/public/api/setlocation</string>

    <string name="send">http://192.168.1.103/vroom-api/public/api/send</string>
    <string name="chatroom">http://192.168.1.103/vroom-api/public/api/chatroom</string>
    <string name="chatexists">http://192.168.1.103/vroom-api/public/api/chatexists</string>
    <string name="message">http://192.168.1.103/vroom-api/public/api/message</string>

    <!--    <string name="profilepic">http://192.168.1.103/vroom-api/public/storage/picture/profile/</string>-->
    <!--    <string name="status">http://192.168.1.103/vroom-api/public/api/status</string>-->
</resources>