<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vroom.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_vehicle"
        android:name="com.example.vroom.ui.vehicle.VehicleFragment"
        android:label="@string/title_vehicle"
        tools:layout="@layout/fragment_vehicle" />

    <fragment
        android:id="@+id/navigation_status"
        android:name="com.example.vroom.ui.status.StatusFragment"
        android:label="@string/title_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.vroom.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.vroom.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>